OpenRewrite: Migrate to Java 25